@@ -4,4 +4,5 @@
 exec java \
     -Dfile.encoding=UTF-8 \
     --add-opens java.base/java.lang=ALL-UNNAMED \
+    --add-opens java.base/java.io=ALL-UNNAMED \
     -jar /prime.jar server /config/config.yaml
